--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Super Mario Game with Camera</title>
+  <title>Mario Game with Restart Feature</title>
   <style>
     body {
       margin: 0;
