--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             height: 100vh;
             background: #222;
             color: white;
+            margin: 0;
+            overflow: hidden;
         }
         .container {
             position: relative;
@@ -33,8 +35,35 @@
             opacity: 0.5;
             pointer-events: none;
         }
-        input, button {
-            margin-top: 10px;
+        .controls {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+        .capture-btn {
+            width: 60px;
+            height: 60px;
+            background: white;
+            border-radius: 50%;
+            border: 4px solid rgba(255, 255, 255, 0.8);
+            cursor: pointer;
+        }
+        .capture-btn:active {
+            background: rgba(255, 255, 255, 0.7);
+        }
+        input[type="file"], input[type="range"] {
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            padding: 5px;
+            border-radius: 5px;
         }
     </style>
 </head>
@@ -45,9 +74,14 @@
         <video id="camera" autoplay playsinline></video>
         <img id="overlay" src="" alt="Overlay Image">
     </div>
+
     <input type="file" id="upload" accept="image/*">
     <input type="range" id="opacity" min="0" max="1" step="0.1" value="0.5">
-    <button id="capture">사진 찍기</button>
+
+    <div class="controls">
+        <button id="capture" class="capture-btn"></button>
+    </div>
+
     <canvas id="canvas" style="display: none;"></canvas>
 
     <script>
