--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
             position: relative;
         }
         .container {
-            position: relative;
-            width: 100%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 90vw;
             max-width: 400px;
             aspect-ratio: 3 / 4; /* 기본값: 4:3 */
             overflow: hidden;
             border: 2px solid white;
             border-radius: 10px;
             transition: aspect-ratio 0.3s ease;
-            z-index: 10; /* 카메라 화면을 버튼보다 위로 배치 */
+            z-index: 10; /* 카메라 화면이 버튼보다 위로 배치 */
         }
         video, img {
             position: absolute;
@@ -46,7 +49,7 @@
             display: flex;
             align-items: center;
             gap: 20px;
-            z-index: 5; /* 버튼들이 카메라보다 아래에 위치 */
+            z-index: 5; /* 버튼이 카메라보다 아래 */
         }
         .btn {
             width: 60px;
