--- a/index.html
+++ b/index.html
@@ -5,30 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>성지순례 카메라</title>
     <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        /* 스크롤 방지 */
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
             background: #222;
             color: white;
-            margin: 0;
-            overflow: hidden;
-            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: fixed;
         }
+        /* 카메라 화면 기본 설정 (4:3) */
         .container {
-            position: absolute;
+            position: fixed;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -55%); /* 4:3에서 버튼보다 살짝 위 */
             width: 90vw;
             max-width: 400px;
-            aspect-ratio: 3 / 4; /* 기본값: 4:3 */
+            aspect-ratio: 3 / 4;
             overflow: hidden;
             border: 2px solid white;
             border-radius: 10px;
-            transition: aspect-ratio 0.3s ease;
+            transition: all 0.3s ease;
             z-index: 10; /* 카메라 화면이 버튼보다 위로 배치 */
         }
         video, img {
@@ -41,6 +44,7 @@
             opacity: 0.5;
             pointer-events: none;
         }
+        /* 기본 버튼 위치 (4:3 모드) */
         .controls {
             position: fixed;
             bottom: 20px;
@@ -49,7 +53,7 @@
             display: flex;
             align-items: center;
             gap: 20px;
-            z-index: 5; /* 버튼이 카메라보다 아래 */
+            z-index: 20; /* 버튼이 카메라보다 위 */
         }
         .btn {
             width: 60px;
@@ -75,6 +79,28 @@
             opacity: 0;
             cursor: pointer;
         }
+        /* 16:9 모드일 때 카메라 전체 화면 */
+        .full-screen {
+            width: 100vw !important;
+            height: 100vh !important;
+            max-width: none;
+            max-height: none;
+            aspect-ratio: unset !important;
+            top: 0;
+            left: 0;
+            transform: none;
+            border: none;
+            border-radius: 0;
+        }
+        /* 16:9 모드일 때 버튼 위치 변경 (카메라 내부 하단) */
+        .full-screen .controls {
+            position: absolute;
+            bottom: 20px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
     </style>
 </head>
 <body>
@@ -83,20 +109,17 @@
     <div class="container" id="cameraContainer">
         <video id="camera" autoplay playsinline></video>
         <img id="overlay" src="" alt="Overlay Image">
-    </div>
-
-    <div class="controls">
-        <!-- 이미지 업로드 버튼 -->
-        <div class="btn">
-            📷
-            <input type="file" id="upload" accept="image/*" class="hidden-input">
+        <div class="controls">
+            <!-- 이미지 업로드 버튼 -->
+            <div class="btn">
+                📷
+                <input type="file" id="upload" accept="image/*" class="hidden-input">
+            </div>
+            <!-- 촬영 버튼 -->
+            <div id="capture" class="btn"></div>
+            <!-- 화면비 변경 버튼 -->
+            <div id="aspectToggle" class="btn">4:3</div>
         </div>
-
-        <!-- 촬영 버튼 -->
-        <div id="capture" class="btn"></div>
-
-        <!-- 화면비 변경 버튼 -->
-        <div id="aspectToggle" class="btn">4:3</div>
     </div>
 
     <canvas id="canvas" style="display: none;"></canvas>
@@ -160,11 +183,11 @@
             // 4. 화면비 변경 기능 (4:3 ↔ 16:9)
             aspectToggle.addEventListener("click", () => {
                 if (currentAspect === "3/4") {
-                    cameraContainer.style.aspectRatio = "16/9";
+                    cameraContainer.classList.add("full-screen");
                     aspectToggle.textContent = "16:9";
                     currentAspect = "16/9";
                 } else {
-                    cameraContainer.style.aspectRatio = "3/4";
+                    cameraContainer.classList.remove("full-screen");
                     aspectToggle.textContent = "4:3";
                     currentAspect = "3/4";
                 }
