--- a/index.html
+++ b/index.html
@@ -34,15 +34,23 @@
             transition: all 0.3s ease;
             z-index: 10;
         }
-        video, img {
+        video {
             position: absolute;
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
-        img {
+        /* 오버레이 이미지 크기 조정 */
+        img#overlay {
+            position: absolute;
+            width: 100%; /* 카메라 화면의 가로 크기에 맞춤 */
+            height: auto; /* 비율 유지하면서 조정 */
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); /* 중앙 정렬 */
             opacity: 0.5;
             pointer-events: none;
+            object-fit: contain; /* 좌우 맞추고, 상하는 여백이 생기도록 */
         }
         /* 기본 버튼 위치 (4:3 모드) */
         .controls {
@@ -68,7 +76,7 @@
             font-weight: bold;
             cursor: pointer;
             text-align: center;
-            position: relative; /* 위치 고정 */
+            position: relative;
         }
         .btn:active {
             background: rgba(255, 255, 255, 0.7);
@@ -80,8 +88,8 @@
             height: 100%;
             opacity: 0;
             cursor: pointer;
-            z-index: 1; /* 파일 선택 버튼이 다른 버튼보다 위에 올라가지 않도록 조정 */
-            pointer-events: auto; /* 클릭 이벤트 정상 동작 */
+            z-index: 1;
+            pointer-events: auto;
         }
         /* 16:9 모드 조정 */
         .anime-camera {
@@ -184,7 +192,7 @@
 
             // 4. 화면비 변경 기능 (4:3 ↔ 16:9)
             aspectToggle.addEventListener("click", (event) => {
-                event.stopPropagation(); // 클릭 이벤트가 다른 버튼에 전달되지 않도록 방지
+                event.stopPropagation();
                 if (currentAspect === "3/4") {
                     cameraContainer.classList.add("anime-camera");
                     aspectToggle.textContent = "16:9";
