--- a/index.html
+++ b/index.html
@@ -43,14 +43,23 @@
         /* 오버레이 이미지 크기 조정 */
         img#overlay {
             position: absolute;
-            width: 100%; /* 카메라 화면의 가로 크기에 맞춤 */
-            height: auto; /* 비율 유지하면서 조정 */
+            width: 100%;
+            height: auto;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%); /* 중앙 정렬 */
+            transform: translate(-50%, -50%);
             opacity: 0.5;
             pointer-events: none;
-            object-fit: contain; /* 좌우 맞추고, 상하는 여백이 생기도록 */
+            object-fit: contain;
+        }
+        /* 투명도 조절 바 */
+        .opacity-slider {
+            position: fixed;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 200px;
+            z-index: 30;
         }
         /* 기본 버튼 위치 (4:3 모드) */
         .controls {
@@ -81,21 +90,11 @@
         .btn:active {
             background: rgba(255, 255, 255, 0.7);
         }
-        /* input[type="file"]가 다른 버튼을 가리지 않도록 설정 */
-        .hidden-input {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            opacity: 0;
-            cursor: pointer;
-            z-index: 1;
-            pointer-events: auto;
-        }
         /* 16:9 모드 조정 */
         .anime-camera {
             width: 100vw;
             max-width: 700px;
-            height: calc(100vh - 100px); /* 위아래 약간 여백을 남김 */
+            height: calc(100vh - 100px);
             aspect-ratio: 16 / 9;
             top: 50%;
             left: 50%;
@@ -116,6 +115,10 @@
 <body>
 
     <h1>성지순례 카메라</h1>
+
+    <!-- 투명도 조절 바 -->
+    <input type="range" id="opacitySlider" class="opacity-slider" min="0" max="1" step="0.05" value="0.5">
+
     <div class="container" id="cameraContainer">
         <video id="camera" autoplay playsinline></video>
         <img id="overlay" src="" alt="Overlay Image">
@@ -141,6 +144,7 @@
             const upload = document.getElementById("upload");
             const capture = document.getElementById("capture");
             const aspectToggle = document.getElementById("aspectToggle");
+            const opacitySlider = document.getElementById("opacitySlider");
             const cameraContainer = document.getElementById("cameraContainer");
             const canvas = document.getElementById("canvas");
             const ctx = canvas.getContext("2d");
@@ -168,7 +172,12 @@
                 }
             });
 
-            // 3. 사진 찍기 기능
+            // 3. 투명도 조절 기능
+            opacitySlider.addEventListener("input", () => {
+                overlay.style.opacity = opacitySlider.value;
+            });
+
+            // 4. 사진 찍기 기능
             capture.addEventListener("click", () => {
                 canvas.width = video.videoWidth;
                 canvas.height = video.videoHeight;
@@ -190,7 +199,7 @@
                 link.click();
             });
 
-            // 4. 화면비 변경 기능 (4:3 ↔ 16:9)
+            // 5. 화면비 변경 기능 (4:3 ↔ 16:9)
             aspectToggle.addEventListener("click", (event) => {
                 event.stopPropagation();
                 if (currentAspect === "3/4") {
