--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             width: 200px;
             z-index: 30;
         }
-        /* 기본 버튼 위치 (4:3 모드) */
+        /* 기본 버튼 스타일 */
         .controls {
             position: fixed;
             bottom: 20px;
@@ -85,17 +85,10 @@
             font-weight: bold;
             cursor: pointer;
             text-align: center;
-            position: relative;
+            color: black; /* 버튼 안의 글씨를 검은색으로 설정 */
         }
         .btn:active {
             background: rgba(255, 255, 255, 0.7);
-        }
-        /* 화면비 변경 버튼 위에 현재 화면비 표시 */
-        .btn-label {
-            position: absolute;
-            top: -20px;
-            font-size: 12px;
-            color: white;
         }
         /* 16:9 모드 조정 */
         .anime-camera {
@@ -138,10 +131,7 @@
             <!-- 촬영 버튼 -->
             <div id="capture" class="btn"></div>
             <!-- 화면비 변경 버튼 -->
-            <div id="aspectToggle" class="btn">
-                <span class="btn-label" id="aspectLabel">16:9</span>  <!-- 현재 선택 가능한 화면비 표시 -->
-                변경
-            </div>
+            <div id="aspectToggle" class="btn">16:9</div>  <!-- 초기 상태를 "16:9"로 설정 -->
         </div>
     </div>
 
@@ -154,7 +144,6 @@
             const upload = document.getElementById("upload");
             const capture = document.getElementById("capture");
             const aspectToggle = document.getElementById("aspectToggle");
-            const aspectLabel = document.getElementById("aspectLabel");
             const opacitySlider = document.getElementById("opacitySlider");
             const cameraContainer = document.getElementById("cameraContainer");
             const canvas = document.getElementById("canvas");
@@ -215,11 +204,11 @@
                 event.stopPropagation();
                 if (currentAspect === "3/4") {
                     cameraContainer.classList.add("anime-camera");
-                    aspectLabel.textContent = "4:3";  // 다음 화면비를 표시
+                    aspectToggle.textContent = "4:3";  // 16:9일 때 "4:3" 표시
                     currentAspect = "16/9";
                 } else {
                     cameraContainer.classList.remove("anime-camera");
-                    aspectLabel.textContent = "16:9";  // 다음 화면비를 표시
+                    aspectToggle.textContent = "16:9";  // 4:3일 때 "16:9" 표시
                     currentAspect = "3/4";
                 }
             });
