--- a/index.html
+++ b/index.html
@@ -86,9 +86,23 @@
             cursor: pointer;
             text-align: center;
             color: black; /* 버튼 안의 글씨를 검은색으로 설정 */
+            position: relative;
         }
         .btn:active {
             background: rgba(255, 255, 255, 0.7);
+        }
+        /* 숨겨진 파일 선택 버튼 */
+        .hidden-input {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            cursor: pointer;
+            z-index: 1;
+            pointer-events: auto;
+        }
+        input[type="file"] {
+            display: none; /* 불필요한 "파일 선택" 버튼 숨김 */
         }
         /* 16:9 모드 조정 */
         .anime-camera {
